--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -191,14 +191,12 @@ Macro Cut Object for Magnets
 <li>Ein Objekt mit einer Festk&ouml;rper-Form (Part-Objekt oder PartDesign-K&ouml;rper).</li>
 <li>F&uuml;r den Modellebenenmodus: eine Bezugsebene oder ein Objekt mit ebenen Fl&auml;chen.</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
-<li>Copy the file to your FreeCAD macro directory:
+<ol><li>Die Makrodatei herunterladen: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
+<li>Die Datei in das FreeCAD-Makroverzeichnis kopieren:
 <ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
 <li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
 <li><b>Windows</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">%APPDATA%/FreeCAD/Macro/</span></li></ul></li>
-<li>Optionally, download the toolbar icon and place it in the same directory.</li></ol>
-</div>
+<li>Optional kann das Symbol f&uuml;r die Werkzeugleiste heruntergeladen und im selben Verzeichnis ablegt werden.</li></ol>
 <p><span id="Tips"></span>
 </p>
 <h2><span class="mw-headline" id="Tipps">Tipps</span></h2>
@@ -239,13 +237,13 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114052710
+Cached time: 20260114052817
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.049 seconds
-Preprocessor visited node count: 154/1000000
+CPU time usage: 0.039 seconds
+Real time usage: 0.066 seconds
+Preprocessor visited node count: 153/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
 Template argument size: 1355/2097152 bytes
 Highest expansion depth: 5/100
@@ -255,13 +253,13 @@ Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.102      1 -total
- 43.27%    3.073      1 Template:Macro
- 26.67%    1.894      3 Template:FileName
- 25.26%    1.794      1 Template:CodeDownload
+100.00%    8.868      1 -total
+ 48.14%    4.269      1 Template:Macro
+ 29.67%    2.631      1 Template:CodeDownload
+ 18.58%    1.648      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052710 and revision id 1738097. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114052817 and revision id 1738099. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
