--- a/wiki/de/Macro_Cut_Object_For_Magnets.html
+++ b/wiki/de/Macro_Cut_Object_For_Magnets.html
@@ -200,11 +200,11 @@ Macro Cut Object for Magnets
 <p><span id="Tips"></span>
 </p>
 <h2><span class="mw-headline" id="Tipps">Tipps</span></h2>
-<ul><li><b>Magnet sizing</b>: Die Magnete sorgf&auml;ltig messen. G&auml;ngige Gr&ouml;&szlig;en sind 3 mm, 5 mm und 6 mm Durchmesser.</li>
-<li><b>Add tolerance</b>: Erw&auml;gen, den Durchmesser um 0,1&ndash;0,2 mm zu vergr&ouml;&szlig;ern, um das Einsetzen des Magneten zu erleichtern.</li>
-<li><b>Depth planning</b>: Die Lochtiefe sollte etwas gr&ouml;&szlig;er als die H&ouml;he des Magneten sein, um einen b&uuml;ndigen oder versenkten Sitz zu gew&auml;hrleisten.</li>
-<li><b>Edge clearance</b>: Bei d&uuml;nnwandigen Objekten sollte der bevorzugte Abstand verringert werden, wobei jedoch der Mindestabstand hoch genug gehalten werden muss, um ein Durchbrechen der Wand zu verhindern.</li>
-<li><b>Re-cutting</b>: Das Makro erkennt vorhandene Magnetl&ouml;cher und beh&auml;lt sie beim Schneiden bereits geschnittener Teile bei.</li></ul>
+<ul><li><b>Magnet sizing</b> (Magnetgr&ouml;&szlig;e): Die Magnete sorgf&auml;ltig messen. G&auml;ngige Gr&ouml;&szlig;en sind 3 mm, 5 mm und 6 mm Durchmesser.</li>
+<li><b>Add tolerance</b> (Toleranz hinzuf&uuml;gen): Erw&auml;gen, den Durchmesser um 0,1&ndash;0,2 mm zu vergr&ouml;&szlig;ern, um das Einsetzen des Magneten zu erleichtern.</li>
+<li><b>Depth planning</b> (Tiefenplanung): Die Lochtiefe sollte etwas gr&ouml;&szlig;er als die H&ouml;he des Magneten sein, um einen b&uuml;ndigen oder versenkten Sitz zu gew&auml;hrleisten.</li>
+<li><b>Edge clearance</b> (Kantenabstand): Bei d&uuml;nnwandigen Objekten sollte der bevorzugte Abstand verringert werden, wobei jedoch der Mindestabstand hoch genug gehalten werden muss, um ein Durchbrechen der Wand zu verhindern.</li>
+<li><b>Re-cutting</b> (Nachschneiden): Das Makro erkennt vorhandene Magnetl&ouml;cher und beh&auml;lt sie beim Schneiden bereits geschnittener Teile bei.</li></ul>
 <p><span id="Source_Code"></span>
 </p>
 <h2><span class="mw-headline" id="Quellcode">Quellcode</span></h2>
@@ -235,11 +235,11 @@ Macro Cut Object for Magnets
 <li><a href="../de/PartDesign_Body.html" title="PartDesign Body/de">PartDesign K&ouml;rper</a> - Dokumentation zum K&ouml;rper-Container.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114053008
+Cached time: 20260114053153
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
+CPU time usage: 0.038 seconds
 Real time usage: 0.048 seconds
 Preprocessor visited node count: 152/1000000
 Post&#8208;expand include size: 3467/2097152 bytes
@@ -251,13 +251,13 @@ Unstrip post&#8208;expand size: 892/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.636      1 -total
- 42.94%    2.420      1 Template:Macro
- 30.64%    1.727      1 Template:CodeDownload
- 20.88%    1.177      3 Template:FileName
+100.00%    7.809      1 -total
+ 42.35%    3.307      1 Template:Macro
+ 33.92%    2.649      1 Template:CodeDownload
+ 18.28%    1.427      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114053008 and revision id 1738101. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411007-0!canonical and timestamp 20260114053153 and revision id 1738103. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
