--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -8,7 +8,7 @@
 </p>
 <h2><span class="mw-headline" id="Beschreibung">Beschreibung</span></h2>
 <p>Der <b>Arbeitsbereich Robust MCP Bridge</b> stellt den serverseitigen Verbindungspunkt bereit, der eine Br&uuml;cke (engl. Bridge) zum <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> bildet, wodurch externe Anwendungen FreeCAD &uuml;ber das <a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol (MCP)</a> steuern k&ouml;nnen. Der Arbeitsbereich l&auml;uft innerhalb von FreeCAD und stellt XML-RPC- und JSON-RPC-Schnittstellen bereit, mit denen externe MCP-Clients eine Verbindung herstellen k&ouml;nnen.
-</p><p>Dieser Arbeitsbereich ist f&uuml;r die Verwendung mit dem <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> (verf&uuml;gbar auf PyPI) konzipiert, der es KI-Assistenten wie <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> erm&ouml;glicht, &uuml;ber nat&uuml;rliche Sprache mit FreeCAD zu interagieren. Die vollst&auml;ndige Dokumentation und der Quellcode sind unter <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a> zu finden, wo der MCP-Server, Bridge und einige FreeCAD-Makros gefunden werden k&ouml;nnen, die f&uuml;r verschiedene Zwecke verwendet werden, die nicht unbedingt mit KI oder der MCP-Arbeit zusammenh&auml;ngen.
+</p><p>Dieser Arbeitsbereich ist f&uuml;r die Verwendung mit dem <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP-Server</a> (verf&uuml;gbar auf PyPI) konzipiert, der es KI-Assistenten wie <a rel="nofollow" class="external text" href="https://claude.ai">Claude</a> erm&ouml;glicht, &uuml;ber nat&uuml;rliche Sprache mit FreeCAD zu interagieren. Die vollst&auml;ndige Dokumentation und der Quellcode sind unter <a rel="nofollow" class="external text" href="https://github.com/spkane/freecad-robust-mcp-and-more">github/spkane/freecad-robust-mcp-and-more</a> zu finden, wo der MCP-Server, Br&uuml;cke und einige FreeCAD-Makros gefunden werden k&ouml;nnen, die f&uuml;r verschiedene Zwecke verwendet werden, die nicht unbedingt mit KI oder der MCP-Arbeit zusammenh&auml;ngen.
 </p><p><b>Wichtigste Merkmale:</b>
 </p>
 <ul><li>Symbolleistensteuerelemente zum Starten/Beenden der MCP-Br&uuml;cke.</li>
@@ -193,12 +193,12 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114045927
+Cached time: 20260114053531
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.047 seconds
+CPU time usage: 0.040 seconds
+Real time usage: 0.050 seconds
 Preprocessor visited node count: 226/1000000
 Post&#8208;expand include size: 2253/2097152 bytes
 Template argument size: 756/2097152 bytes
@@ -209,16 +209,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.045      1 -total
- 22.31%    2.018      4 Template:Code
- 16.29%    1.473      1 Template:TOCright
- 13.20%    1.194      4 Template:MenuCommand
- 12.34%    1.116      5 Template:Incode
- 12.15%    1.099      3 Template:Button
- 12.00%    1.085      3 Template:FileName
+100.00%   10.965      1 -total
+ 26.45%    2.900      4 Template:Code
+ 15.76%    1.728      4 Template:MenuCommand
+ 13.99%    1.534      5 Template:Incode
+ 12.41%    1.361      3 Template:Button
+ 10.15%    1.113      3 Template:FileName
+  9.10%    0.998      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114045927 and revision id 1738083. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114053531 and revision id 1738107. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
