--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -168,11 +168,9 @@
 <p><span id="Connection_Refused"></span>
 </p>
 <h3><span class="mw-headline" id="Verbindung_abgelehnt">Verbindung abgelehnt</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Verify the bridge is running (green status indicator in toolbar).</li>
-<li>Check that ports match between the workbench preferences and your MCP client configuration.</li>
-<li>If connecting from Docker, use <code>host.docker.internal</code> instead of <code>localhost</code>.</li></ol>
-</div>
+<ol><li>&Uuml;berpr&uuml;fen, ob die Bridge l&auml;uft (gr&uuml;ne Statusanzeige in der Symbolleiste).</li>
+<li>&Uuml;berpr&uuml;fen, ob die Ports in den Arbeitsbereichs-Einstellungen mit der MCP-Client-Konfiguration &uuml;bereinstimmen.</li>
+<li>Wenn eine Verbindung &uuml;ber Docker hergestellt werden soll, <code>host.docker.internal</code> anstelle von <code>localhost</code> verwenden.</li></ol>
 <p><span id="Headless_Mode_Won't_Start"></span>
 </p>
 <h3><span class="mw-headline" id="Kopfloser-Modus_startet_nicht">Kopfloser-Modus startet nicht</span></h3>
@@ -189,13 +187,13 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114053736
+Cached time: 20260114053839
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.047 seconds
-Real time usage: 0.059 seconds
-Preprocessor visited node count: 224/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.045 seconds
+Preprocessor visited node count: 223/1000000
 Post&#8208;expand include size: 2257/2097152 bytes
 Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
@@ -205,16 +203,16 @@ Unstrip post&#8208;expand size: 3286/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.931      1 -total
- 20.20%    2.814      4 Template:Code
- 19.41%    2.704      1 Template:TOCright
- 18.79%    2.618      5 Template:Incode
- 12.16%    1.694      4 Template:MenuCommand
-  9.96%    1.388      3 Template:Button
-  9.06%    1.262      3 Template:FileName
+100.00%    9.322      1 -total
+ 23.03%    2.147      5 Template:Incode
+ 21.75%    2.028      4 Template:Code
+ 11.44%    1.066      1 Template:TOCright
+ 10.64%    0.992      4 Template:MenuCommand
+ 10.45%    0.974      3 Template:FileName
+ 10.26%    0.957      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114053736 and revision id 1738111. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114053839 and revision id 1738113. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
