--- a/wiki/de/Robust_MCP_Bridge_Workbench.html
+++ b/wiki/de/Robust_MCP_Bridge_Workbench.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Robust MCP Bridge Workbench/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Robust+MCP+Bridge+Workbench&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Robust_MCP_Bridge_Workbench.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Robust MCP Bridge Workbench (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Robust_MCP_Bridge_Workbench.html" class="mw-pt-progress mw-pt-progress--low" title="Atelier Robust MCP Bridge (2% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <figure typeof="mw:File/Thumb"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="128" height="128" class="mw-file-element" data-file-width="64" data-file-height="64"></a><figcaption>Symbol des Arbeitsbereichs Robust MCP Bridge</figcaption></figure>
@@ -174,11 +174,9 @@
 <p><span id="Headless_Mode_Won't_Start"></span>
 </p>
 <h3><span class="mw-headline" id="Kopfloser-Modus_startet_nicht">Kopfloser-Modus startet nicht</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Ensure you're using <code>freecadcmd</code> (not <code>freecad</code>).</li>
-<li>Verify the script path is correct for your installation.</li>
-<li>Test FreeCAD first: <code>freecadcmd -c "print('test')"</code>.</li></ol>
-</div>
+<ol><li>Sicherstellen, dass <code>freecadcmd</code> (nicht <code>freecad</code>) verwendet wird.</li>
+<li>&Uuml;berpr&uuml;fen, ob der Skriptpfad f&uuml;r die Installation korrekt ist.</li>
+<li>FreeCAD zun&auml;chst testen: <code>freecadcmd -c "print('test')"</code>.</li></ol>
 <p><span id="Links"></span>
 </p>
 <h2><span class="mw-headline" id="Verweise">Verweise</span></h2>
@@ -187,32 +185,32 @@
 <li><a rel="nofollow" class="external text" href="https://modelcontextprotocol.io/">Model Context Protocol</a> - Die Protokollspezifikation.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114053839
+Cached time: 20260114053931
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.035 seconds
-Real time usage: 0.045 seconds
-Preprocessor visited node count: 223/1000000
+CPU time usage: 0.041 seconds
+Real time usage: 0.054 seconds
+Preprocessor visited node count: 222/1000000
 Post&#8208;expand include size: 2257/2097152 bytes
 Template argument size: 760/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 4/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3286/5000000 bytes
+Unstrip post&#8208;expand size: 3290/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.322      1 -total
- 23.03%    2.147      5 Template:Incode
- 21.75%    2.028      4 Template:Code
- 11.44%    1.066      1 Template:TOCright
- 10.64%    0.992      4 Template:MenuCommand
- 10.45%    0.974      3 Template:FileName
- 10.26%    0.957      3 Template:Button
+100.00%    9.643      1 -total
+ 24.40%    2.353      4 Template:Code
+ 14.20%    1.369      5 Template:Incode
+ 13.82%    1.333      1 Template:TOCright
+ 13.70%    1.321      4 Template:MenuCommand
+ 11.48%    1.107      3 Template:FileName
+ 11.26%    1.086      3 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114053839 and revision id 1738113. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411042-0!canonical and timestamp 20260114053931 and revision id 1738115. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
