--- a/wiki/de/Macro_Multi_Export.html
+++ b/wiki/de/Macro_Multi_Export.html
@@ -96,17 +96,15 @@ Macro Multi Export
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Select one or more objects in the 3D view that you want to export.</li>
-<li>Run the macro from <b>Macro &rarr; Macros &rarr; MultiExport &rarr; Execute</b>.</li>
-<li>In the dialog:
-<ul><li>Review the selected objects in the "Objects to Export" section.</li>
-<li>Check the formats you want to export to (STL, STEP, 3MF are selected by default).</li>
-<li>Choose an output directory using the "Browse..." button.</li>
-<li>Enter a base filename (the format extension will be appended automatically).</li>
-<li>Optionally adjust mesh tolerance settings for mesh-based formats.</li></ul></li>
-<li>Click "Export" to create the files.</li></ol>
-</div>
+<ol><li>In der 3D-Ansicht ein oder mehrere Objekte ausw&auml;hlen, die exportiert werden sollen.</li>
+<li>Das Makro &uuml;ber <b>Makro &rarr; Makros &rarr; MultiExport &rarr; Ausf&uuml;hren</b> ausf&uuml;hren.</li>
+<li>Im Dialogfeld:
+<ul><li>Die ausgew&auml;hlten Objekte im Abschnitt &bdquo;Objects to Export&ldquo; (Zu exportierende Objekte) &uuml;berpr&uuml;fen.</li>
+<li>Die Formate markieren, in die exportiert werden soll (STL, STEP und 3MF sind standardm&auml;&szlig;ig ausgew&auml;hlt).</li>
+<li>&Uuml;ber die Schaltfl&auml;che &bdquo; Browse...&rdquo; (Durchsuchen...) ein Ausgabeverzeichnis ausw&auml;hlen.</li>
+<li>Einen Basisdateinamen eingeben (die Dateiendung wird automatisch angeh&auml;ngt).</li>
+<li>Optional die Einstellungen f&uuml;r die Netztoleranz f&uuml;r netzbasierte Formate anpassen.</li></ul></li>
+<li>Auf &bdquo; Export&rdquo; (Exportieren) klicken, um die Dateien zu erstellen.</li></ol>
 <figure class="mw-halign-center" typeof="mw:File"><a href="../index.php?title=Macro_Multi_Export_dialog.png&amp;filetimestamp=20260106014550&amp;.html" class="mw-file-description"><img src="../File/Macro_Multi_Export_dialog.png" decoding="async" width="400" height="568" class="mw-file-element" data-file-width="1002" data-file-height="1424"></a><figcaption></figcaption></figure>
 <p><span id="Requirements"></span>
 </p>
@@ -151,13 +149,13 @@ Macro Multi Export
 <li><a href="../de/Import_Export.html" title="Import Export/de">Import/Export</a> - &Uuml;bersicht &uuml;ber die Import-/Exportformate von FreeCAD.</li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260114054333
+Cached time: 20260114054617
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.030 seconds
-Real time usage: 0.043 seconds
-Preprocessor visited node count: 136/1000000
+CPU time usage: 0.031 seconds
+Real time usage: 0.041 seconds
+Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 3255/2097152 bytes
 Template argument size: 1163/2097152 bytes
 Highest expansion depth: 5/100
@@ -167,13 +165,13 @@ Unstrip post&#8208;expand size: 842/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.790      1 -total
- 40.33%    2.335      1 Template:Macro
- 34.39%    1.991      1 Template:CodeDownload
- 21.22%    1.229      3 Template:FileName
+100.00%    4.461      1 -total
+ 43.06%    1.921      1 Template:Macro
+ 25.64%    1.144      3 Template:FileName
+ 25.51%    1.138      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114054333 and revision id 1738121. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411027-0!canonical and timestamp 20260114054617 and revision id 1738123. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
