--- a/wiki/Macro_Multi_Export.html
+++ b/wiki/Macro_Multi_Export.html
@@ -1,4 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Multi Export</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+Multi+Export&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="de/Macro_Multi_Export.html" class="mw-pt-progress mw-pt-progress--high" title="Makro Mehrfach-Export (94% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="fr/Macro_Multi_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Macro Multi Export (6% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
@@ -105,7 +106,7 @@ Macro Multi Export
 <ul><li>FreeCAD 0.21 or later.</li>
 <li>Objects with solid shapes (Part or PartDesign bodies).</li></ul>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
-<ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Cut_Object_for_Magnets/CutObjectForMagnets.FCMacro">CutObjectForMagnets.FCMacro</a>.</li>
+<ol><li>Download the macro file: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/spkane/freecad-robust-mcp-and-more/refs/heads/main/macros/Multi_Export/MultiExport.FCMacro">MultiExport.FCMacro</a>.</li>
 <li>Copy the file to your FreeCAD macro directory:
 <ul><li><b>macOS</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/Library/Application Support/FreeCAD/Macro/</span></li>
 <li><b>Linux</b>: <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">~/.local/share/FreeCAD/Macro/</span></li>
@@ -137,29 +138,29 @@ Macro Multi Export
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260113122654
+Cached time: 20260114055213
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.055 seconds
+CPU time usage: 0.051 seconds
+Real time usage: 0.054 seconds
 Preprocessor visited node count: 143/1000000
 Post&#8208;expand include size: 3177/2097152 bytes
 Template argument size: 1097/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 682/5000000 bytes
+Unstrip post&#8208;expand size: 847/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.987      1 -total
- 47.88%    2.388      1 Template:Macro
- 25.38%    1.266      3 Template:FileName
- 21.73%    1.084      1 Template:CodeDownload
+100.00%    3.893      1 -total
+ 48.55%    1.890      1 Template:Macro
+ 22.79%    0.887      3 Template:FileName
+ 22.40%    0.872      1 Template:CodeDownload
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260113122654 and revision id 1737826. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:409403-0!canonical and timestamp 20260114055234 and revision id 1738124. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
