--- a/wiki/zh-cn/Installing_on_Windows.html
+++ b/wiki/zh-cn/Installing_on_Windows.html
@@ -18,7 +18,7 @@
 <li><a href="../ru/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--med" title="&#1059;&#1089;&#1090;&#1072;&#1085;&#1086;&#1074;&#1082;&#1072; &#1074; Windows (64% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../uk/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="Installing on Windows/uk (0% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
 <li><a href="../zh/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--low" title="&#22312;Windows&#29615;&#22659;&#20013;&#23433;&#35013; (0% translated)" lang="zh" dir="ltr">&#20013;&#25991;</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</span></li>
 <li><a href="../ja/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--med" title="Install on Windows/Windows&#19978;&#12391;&#12398;FreeCAD&#12398;&#12452;&#12531;&#12473;&#12488;&#12540;&#12523; (16% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Installing_on_Windows.html" class="mw-pt-progress mw-pt-progress--complete" title="&#50952;&#46020;&#50864;&#50640; &#49444;&#52824;&#54616;&#44592; (100% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -37,10 +37,8 @@
 <p>The easiest way to install the latest stable version of FreeCAD is to use the installer, see the <a href="../Download.html" title="Download">Download</a> page.
 </p>
 </div>
-<div class="mw-translate-fuzzy">
 <p>&#22914;&#26524;&#20320;&#24819;&#19979;&#36733;&#19968;&#20010; 64 &#20301;&#25110;&#32773;&#19981;&#31283;&#23450;&#30340;&#24320;&#21457;&#29256;&#26412;&#65292;&#35831;&#21442;&#32771; <a href="../zh-cn/Download.html" title="Download/zh-cn">&#19979;&#36733;</a> &#39029;&#12290;
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>&#19979;&#36733;&#23436; .msi (&#24494;&#36719;&#23433;&#35013;&#25991;&#20214;&#26684;&#24335;) &#25991;&#20214;&#65292;&#21482;&#38656;&#35201;&#21452;&#20987;&#23427;&#20197;&#21551;&#21160;&#23433;&#35013;&#36807;&#31243;&#12290;
 </p>
@@ -156,13 +154,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111205908
+Cached time: 20260114073119
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.237 seconds
-Preprocessor visited node count: 271/1000000
+CPU time usage: 0.063 seconds
+Real time usage: 0.160 seconds
+Preprocessor visited node count: 270/1000000
 Post&#8208;expand include size: 8386/2097152 bytes
 Template argument size: 2571/2097152 bytes
 Highest expansion depth: 5/100
@@ -172,17 +170,17 @@ Unstrip post&#8208;expand size: 5311/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.814      1 -total
- 39.21%   16.001      2 Template:Docnav
- 39.00%   15.918      1 Template:Userdocnavi/zh-cn
- 13.68%    5.584      1 Template:Navigation_menu_2
-  6.38%    2.603      6 Template:Code
-  5.36%    2.186      1 Template:Incode
-  4.04%    1.650      3 Template:FileName
-  3.75%    1.529      1 Template:TOCright
+100.00%   21.659      1 -total
+ 51.43%   11.140      1 Template:Userdocnavi/zh-cn
+ 18.22%    3.946      1 Template:Navigation_menu_2
+ 14.67%    3.177      6 Template:Code
+ 11.65%    2.524      2 Template:Docnav
+  6.51%    1.410      1 Template:TOCright
+  6.03%    1.307      1 Template:Incode
+  5.83%    1.264      3 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:82398-0!canonical and timestamp 20260111205908 and revision id 1730542. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:82398-0!canonical and timestamp 20260114073117 and revision id 1738128. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
